# algorithmic-excercises

./: .dockerignore  .env  .flake8  .gitignore  .gitlinks  .pre-commit-config.yaml  .prettierignore  .pylintrc  .releaserc.mjs  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yaml  mypy.ini  package-lock.json  package.json  pyproject.toml  pypyr-config.yaml  pytest.ini  releaserc.toml  requirements.all.txt  requirements.cli.txt  requirements.dev.txt  requirements.frozen.txt  requirements.main.txt  requirements.min.txt  requirements.pipx.txt  requirements.pipx_inject.txt  requirements.poetry-plugin.txt  requirements.poetry.cli.txt  requirements.poetry.dev.txt  requirements.poetry.main.txt  requirements.prd.txt  requirements.release.txt  requirements.txt  ruff.toml  setup.py
.github/codeql/: codeql-config.yml
.github/workflows/: always.yml  pull_request.yml
data/config/: logging.json
features/: Eat cucumbers.feature  cucumbers.feature  leetcode__longest_common_prefix.feature
features/leetcode/: Two Sum.feature
features/leetcode/easy/: Longest Common Prefix.feature  Two Sum.feature
features/problems/euler/: Largest Palindrome Product.feature  Largest Prime Factor.feature  Sum Even Fibonacci Numbers.feature  Sum Multiples of 3 or 5.feature
features/problems/interviews/: Shortest Common Prefixes.feature
features/problems/leetcode/easy/: Build Array from Permutation.feature  Longest Common Prefix.feature  Merge Two Sorted Arrays.feature  Palindrome Number.feature  Reverse String.feature  Roman to Integer.feature  Valid Parentheses.feature
pipelines/: build.yaml  ci.yaml  clean.yaml  dev.yaml  format.yaml  lint.yaml  lock.yaml  qa.yaml  style.yaml  test.yaml
problems/leetcode/easy/: longest_common_prefix.py  two_sum.py
scripts/: cwd.ba.sh  install.ba.sh  noop.ba.sh  prepare.ba.sh  setup.ba.sh  setup_ci.ba.sh
scripts/doctest/: run.ba.sh
scripts/gil/: setup.ba.sh
scripts/npm/: install.ba.sh
scripts/pip/: install.ba.sh  setup.ba.sh  upgrade.ba.sh
scripts/pipx/: inject.ba.sh  install.ba.sh  setup.ba.sh
scripts/poetry/plugin/: add.ba.sh
scripts/setup/: ci.ba.sh
src/problems/: __main__.py  benchmarks.py
src/problems/commons/: utils.py
src/problems/config/: __main__.py  configuration.py  settings.py
src/problems/euler/even_fibonacci_numbers/: README.md  __init__.py  __main__.py  v1.py
src/problems/euler/largest_palindrome_product/: README.md  __init__.py  __main__.py  v1.py
src/problems/euler/largest_prime_factor/: README.md  __init__.py  __main__.py  v1.py
src/problems/euler/multiples_of_3_or_5/: README.md  __init__.py  __main__.py  nayuki.py  v1.py  v2.py
src/problems/interviews/: shortest_common_prefixes.py
src/problems/interviews/shortest_common_prefixes/: README.md  __init__.py  __main__.py  types.py  v1.py  v2.py
src/problems/leetcode/: LICENSE
src/problems/leetcode/easy/: longest_common_prefix.py  palindrome_number.py  roman_to_integer.py  two_sum.py  valid_parentheses.py
src/problems/leetcode/hard/: median_of_two_sorted_arrays.py  v1.py
src/problems/leetcode/medium/: __init__.py
src/problems/lib/: printing.py  utils.py
tests/: utils.py
tests/problems/leetcode/easy/: test__processor.py
tests/pytest_bdd_parser/: test_parse.py
tests/python/: test_functions_with_defaults.py
tests/python/classes/: test_class.py  test_dataclass.py
tests/python/functions/: test_default_list.py
tests/step_defs/: test__cucumbers.py  test__leetcode__longest_common_prefix.py  test__leetcode__two_sum.py
tests/step_defs/problems/euler/: test__even_fibonacci_numbers.py  test__largest_palindrome_product.py  test__largest_prime_factor.py  test__multiples_of_3_and_5.py
tests/step_defs/problems/interview/: test__shortest_common_prefixes.py
tests/step_defs/pytest_bdd_parser/: test_parse.py
typings/logging/: __init__.pyi  config.pyi  handlers.pyi
(+151 files in other folders)
